feat: 5/31 14:07 뭔가뭔가만드는중 - taplayout

--- a/frontEnd/app/src/main/res/layout/fragment_second.xml
+++ b/frontEnd/app/src/main/res/layout/fragment_second.xml
@@ -13,24 +13,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginRight="10dp">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="전체"
-                android:textColor="@color/black"
-                android:textSize="20sp" />
-
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="38dp"
-                android:buttonTint="#FCD46A" />
-        </LinearLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -52,6 +35,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_1"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -69,6 +53,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_14"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -97,6 +82,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_2"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -114,6 +100,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_15"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -140,6 +127,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_3"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -157,6 +145,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_16"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -183,6 +172,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_4"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -200,6 +190,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_17"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -226,6 +217,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_5"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
 
@@ -244,6 +236,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_18"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -270,6 +263,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_6"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
 
@@ -288,6 +282,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_19"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -314,6 +309,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_7"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -331,6 +327,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_20"
                 android:buttonTint="#FCD46A"
                 android:layout_marginRight="19dp"
                 android:layout_width="wrap_content"
@@ -358,6 +355,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_8"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
 
@@ -376,6 +374,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_21"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -401,6 +400,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_9"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -418,6 +418,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_22"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -441,6 +442,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_10"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
                 android:layout_width="wrap_content"
@@ -458,6 +460,7 @@
                android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_23"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -482,6 +485,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_11"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -500,6 +504,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_24"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -527,6 +532,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_12"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
 
@@ -545,6 +551,7 @@
                 android:textColor="@color/black"
                 android:textSize="20sp" />
             <CheckBox
+                android:id="@+id/sec_checkbox_25"
                 android:buttonTint="#FCD46A"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -572,6 +579,7 @@
                 android:textSize="20sp" />
 
             <CheckBox
+                android:id="@+id/sec_checkbox_13"
                 android:buttonTint="#FCD46A"
                 android:layout_marginLeft="19dp"
 
@@ -603,6 +611,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
         <ImageView
+            android:id="@+id/sec_seleted"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/check_done_icon"/>
