--- a/frontEnd/app/src/main/res/layout/fragment_third.xml
+++ b/frontEnd/app/src/main/res/layout/fragment_third.xml
@@ -25,6 +25,7 @@
             android:layout_weight="1" />
 
         <CheckBox
+            android:id="@+id/thr_checkbox_1"
             android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -49,6 +50,7 @@
             android:layout_weight="1" />
 
         <CheckBox
+            android:id="@+id/thr_checkbox_2"
             android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -73,6 +75,7 @@
             android:layout_weight="1" />
 
         <CheckBox
+            android:id="@+id/thr_checkbox_3"
             android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -96,33 +99,12 @@
             android:layout_weight="1" />
 
         <CheckBox
+            android:id="@+id/thr_checkbox_4"
             android:buttonTint="#FCD46A"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="3년이내"
-            android:textColor="@color/black"
-            android:textSize="20sp" />
-
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <CheckBox
-            android:buttonTint="#FCD46A"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
     <View
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -141,6 +123,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" />
         <ImageView
+            android:id="@+id/thr_seleted"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/check_done_icon"/>
