--- a/frontEnd/app/src/main/res/layout/activity_spot_list.xml
+++ b/frontEnd/app/src/main/res/layout/activity_spot_list.xml
@@ -112,6 +112,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/spotRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
