--- a/frontEnd/app/src/main/res/layout/spot_list_item.xml
+++ b/frontEnd/app/src/main/res/layout/spot_list_item.xml
@@ -1,73 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:padding="10dp"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="5dp">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:orientation="horizontal"
-        android:background="@drawable/spot_item">
-        <ImageView
+        android:padding="5dp"
+        android:background="@drawable/dibs_item_base">
+        <TextView
+            android:id="@+id/upsoName"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="10dp"
-            android:background="@drawable/check_done_icon"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_marginLeft="20dp"
+            android:text="가게명"
+            android:textSize="20sp"
+            android:textColor="@color/black"/>
         <LinearLayout
-            android:orientation="vertical"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="가게명"
-                    android:textColor="@color/black"
-                    android:textSize="20sp"/>
-                <View
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/bin_heart_icon"/>
-            </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="25dp">
             <TextView
+                android:id="@+id/siteAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="광진구 구의동 자양로 199-1"/>
-            <LinearLayout
+                android:text="서울 특별시 oo구 oo동"/>
+            <TextView
+                android:id="@+id/geEnYn"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="모범식당"/>
-                <ImageView
-                    android:layout_marginStart="3dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/check_icon"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_gravity="center"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="지도에서 보기"/>
-                <ImageView
-                    android:layout_marginStart="3dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/green_map_icon"/>
-            </LinearLayout>
+                android:layout_height="wrap_content"
+                android:text="모범식당여부"/>
         </LinearLayout>
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/dibs"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/hart_home_icon"
+            android:layout_marginRight="25dp"
+            android:layout_gravity="center"/>
     </LinearLayout>
 </LinearLayout>
