--- a/frontEnd/app/src/main/res/layout/activity_search_select.xml
+++ b/frontEnd/app/src/main/res/layout/activity_search_select.xml
@@ -219,9 +219,10 @@
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/resturant_list"
                 android:layout_width="match_parent"
                 android:layout_margin="8dp"
-                android:layout_height="wrap_content"/>
+                android:layout_height="280dp"/>
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
